<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Bate Conta</string>
    <string name="vamos_beber">Let\'s Drink!</string>
    <string name="login" translatable="false">Login</string>
    <string name="cancelar">Cancel</string>
    <string name="Texto_Senha">Password</string>
    <string name="sobre">About</string>
    <string name="sair">Exit</string>
    <string name="senha">Password</string>
    <string name="desconectar">Disconnect and Exit</string>
    <string name="criar_conta">Create Account</string>
    <string name="Texto_Novo_Produto">New Product</string>
    <string name="Texto_ConfirmarSenha">Confirm Password</string>
    <string name="Texto_Erro_Senhas">Password must be equal</string>
    <string name="confirmar_e_iniciar_nova_conta">Confirm and start new account</string>
    <string name="confirmar_e_manter_a_conta">Confirm and keep account</string>
    <string name="ValorPagar">Total ammount:</string>
    <string name="Texto_Erro_BuscarLogin">Error on login</string>
    <string name="Texto_Erro_PreencherUsuarioSenha">User and password must be informed</string>
    <string name="Texto_Erro_UsuarioSenhaInvalido">Invalid username or password</string>
    <string name="Texto_Erro_CadastrarUsuario">Fail to create user</string>
    <string name="Texto_Erro_UsuarioUtilizado">Username not unique</string>
    <string name="Texto_Erro_BuscaUsuario">Error to create user</string>
    <string name="Texto_NomeUsuario">Username</string>
    <string name="confirmar">Confirm</string>
    <string name="Texto_Erro_Adicionar">Error creating new product</string>
    <string name="Texto_Sucesso_Apagar">Sucsess!</string>
    <string name="Texto_Sucesso">Sucsess!</string>
    <string name="Texto_Erro_Apagar">Error deleting product</string>
    <string name="Texto_Erro_Somar">Error to add  product</string>
    <string name="Texto_Erro_Subtrair">Error to subtract product</string>
    <string name="Texto_Quantidade_Produto">Quantity</string>
    <string name="Texto_Valor_Produto">Value</string>
    <string name="Texto_Nome_Produto">Name</string>
    <string name="informe_o_nome_de_usuario">Username</string>
    <string name="manter_conectado">Keep conected</string>
    <string name="desenvolvido_por">Developed by</string>
    <string name="everton_mendes" translatable="false">Everton Mendes</string>
    <string name="vers_o">Version:</string>
    <string name="Novo_produto">New Product</string>
    <string name="editar">Edit</string>
    <string name="apagar">Delete</string>
    <string name="subtrair">Substract</string>
    <string name="somar">Sum</string>
</resources>