<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_splash_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/background_splash">
    <TextView
        android:id="@+id/tvNomeApp"
        style="@style/sobre"
        android:text="@string/app_name"/>
    <ImageView
        android:layout_width="@dimen/largura_logo_splash"
        android:layout_height="@dimen/altura_logo_splash"
        android:id="@+id/logo"
        android:background="@drawable/bate_conta" />
    <TextView
        android:id="@+id/tvDesenvolvidoPor"
        style="@style/sobre"
        android:text="@string/desenvolvido_por" />

    <TextView
        android:id="@+id/tvNome"
        style="@style/sobre"
        android:text="@string/everton_mendes" />

    <TextView
        android:id="@+id/tvTxtVersao"
        style="@style/sobre"
        android:text="@string/vers_o"/>

    <TextView
        android:id="@+id/tvNumeroVersao"
        style="@style/sobre"
        android:text="1.0.0"/>
</LinearLayout>
