<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tvTextoContaNew"
        style="@style/padrao"
        android:text="@string/ValorPagar"/>

    <TextView
        android:id="@+id/tvValorTotalContaNew"
        style="@style/padrao" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btConfirmarContaNew"
            style="@style/botao"
            android:text="@string/confirmar_e_iniciar_nova_conta"
            android:onClick="confirmarNovo"/>
        <Button
            android:id="@+id/btConfirmarContaOld"
            style="@style/botao"
            android:text="@string/confirmar_e_manter_a_conta"
            android:onClick="confirmar"/>
    </LinearLayout>
</LinearLayout>

